@startuml ffbd

left to right direction
skinparam roundcorner 5
skinparam linetype ortho
skinparam shadowing false
skinparam handwritten false
skinparam class {
  BackgroundColor white
  ArrowColor #2688d4
  BorderColor #2688d4
}

!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( challenge ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 column( body ): CHARACTER VARYING
 column( expiresAt ): TIMESTAMP
}

table( invite ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 column( body ): CHARACTER VARYING
 column( expiresAt ): TIMESTAMP
 column( email ): CHARACTER VARYING
 foreign_key( projectId ): UUID
}

table( namespace ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 column( name ): CHARACTER VARYING
 foreign_key( parentId ): UUID
 foreign_key( projectId ): UUID
}

table( project ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 column( name ): CHARACTER VARYING
}

table( rule ) {
 primary_key( id ): INTEGER
 column( ptype ): CHARACTER VARYING
 column( v0 ): CHARACTER VARYING
 column( v1 ): CHARACTER VARYING
 column( v2 ): CHARACTER VARYING
 column( v3 ): CHARACTER VARYING
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
}

table( secret ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 column( name ): CHARACTER VARYING
 column( encryptedValue ): CHARACTER VARYING
 foreign_key( namespaceId ): UUID
 foreign_key( projectId ): UUID
}

table( security_key ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 foreign_key( userId ): UUID
 foreign_key( entityId ): UUID
 column( encryptedKey ): CHARACTER VARYING
 foreign_key( projectId ): UUID
}

table( trace ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 foreign_key( userId ): UUID
 foreign_key( projectId ): UUID
 column( url ): CHARACTER VARYING
 column( method ): CHARACTER VARYING
 column( body ): CHARACTER VARYING
 column( query ): CHARACTER VARYING
}

table( user ) {
 primary_key( id ): UUID
 column( createdAt ): TIMESTAMP
 column( updatedAt ): TIMESTAMP
 column( email ): CHARACTER VARYING
 column( publicKey ): CHARACTER VARYING
}

project ||--o{ namespace
user ||--o{ security_key
namespace ||--o{ secret
namespace ||--o| namespace
project ||--o{ secret
user ||--o{ trace
project ||--o{ trace
project ||--o{ invite
namespace ||--o{ security_key
user ||--o{ rule
namespace ||--o{ rule

@enduml

' https://plantuml.com/ie-diagram
' https://raphael-leger.medium.com/automatically-generating-up-to-date-database-diagrams-with-typeorm-d1279a20545e
